--- a/11. Graphs/05. Graph Valid Tree.html
+++ b/11. Graphs/05. Graph Valid Tree.html
@@ -31,6 +31,9 @@
                     graph.get(v).push(u);
                 }
 
+                console.log(graph);
+                
+
                 // Set to keep track of visited nodes during DFS
                 const visited = new Set();
 
