--- a/11. Graphs/06. Number of Connected Components in an Undirected Graph.html
+++ b/11. Graphs/06. Number of Connected Components in an Undirected Graph.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Number of Connected Components in an Undirected Graph</title>
 </head>
 <body>
     
