--- a/15. Greedy/02. Jump Game.html
+++ b/15. Greedy/02. Jump Game.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jump Game</title>
 </head>
+
 <body>
     <script>
-        
+        function canJump(nums) {
+
+            let goal = nums.length - 1;
+
+            for (let i = nums.length - 2; i >= 0; i--) {
+                if (i + nums[i] >= goal) {
+                    goal = i;
+                }
+            }
+
+            return goal === 0;
+        }
+
+        const nums = [1,2,0,1,0];
+        console.log(canJump(nums));
     </script>
 </body>
+
 </html>
