--- a/16. Intervals/01. Insert Interval.html
+++ b/16. Intervals/01. Insert Interval.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <script>
-        
+        function demo(interval, newInterval){
+            
+        }
     </script>
 </body>
 </html>
