--- a/16. Intervals/01. Insert Interval.html
+++ b/16. Intervals/01. Insert Interval.html
@@ -1,15 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insert Interval</title>
 </head>
+
 <body>
     <script>
-        function demo(interval, newInterval){
-            
+        // function demo(intervals, newInterval) {
+
+
+        //     let res = [];
+        //     let min = []
+
+        //     for (let i = 0; i < intervals.length; i++) {
+        //         if (intervals[i][1] > newInterval[0]) {
+        //             min = Math.min(intervals[i][0], newInterval[0]);
+        //             res.push([min, newInterval[1]]);
+        //         }
+        //     }
+
+        //     return res;
+        // }
+
+
+
+        function insertIntervals(intervals, newInterval) {
+            const res = [];
+
+            for (const interval of intervals) {
+                if (newInterval === null || interval[1] < newInterval[0]) {
+                    res.push(interval);
+                } else if (interval[0] > newInterval[1]) {
+                    res.push(newInterval);
+                    res.push(interval);
+                    newInterval = null;
+                } else {
+                    newInterval[0] = Math.min(interval[0], newInterval[0]);
+                    newInterval[1] = Math.max(interval[1], newInterval[1]);
+                }
+            }
+
+            if (newInterval !== null) res.push(newInterval);
+            return res;
         }
+
+
+        intervals = [[1,2],[3,5],[9,10]], newInterval = [6,7]
+        console.log(insertIntervals(intervals, newInterval));
     </script>
 </body>
+
 </html>
