--- a/16. Intervals/01. Insert Interval.html
+++ b/16. Intervals/01. Insert Interval.html
@@ -34,7 +34,7 @@
             for (const interval of intervals) {
                 // Case 1: Current interval ends before the new interval starts (no overlap)
                 if (newInterval === null || interval[1] < newInterval[0]) {
-                    res.push(interval); // Just add the current interval to the result
+                    res.push(interval); 
                 }
 
                 // Case 2: Current interval starts after the new interval ends (no overlap)
@@ -43,7 +43,7 @@
                     res.push(interval);    
                     newInterval = null;  
                 }
-                
+
                 // Case 3: Overlapping intervals (merge them)
                 else {
                     newInterval[0] = Math.min(interval[0], newInterval[0]); 
