--- a/16. Intervals/01. Insert Interval.html
+++ b/16. Intervals/01. Insert Interval.html
@@ -9,28 +9,32 @@
 
 <body>
     <script>
-        function demo(intervals, newInterval) {
-
+        function insertInterval(intervals, newInterval) {
 
             let res = [];
 
-            for(const interval of intervals){
-                if(interval[1] < newInterval[0]){
+            for (const interval of intervals) {
+
+                if (interval[1] < newInterval[0]) {
                     res.push(interval);
                 }
-                else if(interval[0] > newInterval[1]){
+                else if (interval[0] > newInterval[1]) {
                     res.push(newInterval);
                     res.push(interval);
                     newInterval = null;
+                } else {
+                    newInterval[0] = Math.min(interval[0], newInterval[0]);
+                    newInterval[1] = Math.max(interval[1], newInterval[1])
                 }
             }
 
+            if (newInterval !== null) res.push(newInterval);
             return res;
         }
 
 
-        intervals = [[1, 2], [3, 5], [9, 10]], newInterval = [6, 7]
-        console.log(demo(intervals, newInterval));
+        intervals = [[1, 3], [4, 6]], newInterval = [2, 5];
+        console.log(insertInterval(intervals, newInterval));
     </script>
 </body>
 
