--- a/16. Intervals/01. Insert Interval.html
+++ b/16. Intervals/01. Insert Interval.html
@@ -33,7 +33,7 @@
         }
 
 
-        intervals = [[1, 3], [4, 6]], newInterval = [2, 5];
+        intervals = [[1,2],[3,5],[9,10]], newInterval = [6,7]
         console.log(insertInterval(intervals, newInterval));
     </script>
 </body>
