--- a/16. Intervals/02. Merge Intervals.html
+++ b/16. Intervals/02. Merge Intervals.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Merge Intervals</title>
 </head>
+
 <body>
-    
+    <script>
+        function mergeIntervals(intervals) {
+            if (!intervals.length) return [];
+
+            // Step 1: Sort intervals by start time
+            intervals.sort((a, b) => a[0] - b[0]);
+
+            const merged = [intervals[0]];
+
+            for (let i = 1; i < intervals.length; i++) {
+                
+                const prev = merged[merged.length - 1];
+                const curr = intervals[i];
+
+                // If overlapping, merge
+                if (curr[0] <= prev[1]) {
+                    prev[1] = Math.max(prev[1], curr[1]);
+                } else {
+                    // No overlap, push as is
+                    merged.push(curr);
+                }
+            }
+
+            return merged;
+        }
+
+
+        intervals = [[1, 3], [1, 5], [6, 7]];
+        console.log(mergeIntervals(intervals));
+    </script>
 </body>
+
 </html>
