--- a/16. Intervals/05. Meeting Rooms II.html
+++ b/16. Intervals/05. Meeting Rooms II.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meeting Rooms II</title>
 </head>
+
 <body>
     <script>
-        
+
+        function minMeetingRooms(intervals) {
+
+            if (!intervals || intervals.length === 0) return 0;
+
+            intervals.sort((a, b) => a[0] - b[0]);
+
+            const heap = [intervals[0][1]];
+
+            for (let i = 1; i < intervals.length; i++) {
+
+                let start = intervals[i][0];
+                let end = intervals[i][1];
+
+
+                if (start >= heap[0]) {
+                    heap.shift();
+                }
+
+                heap.push(end);
+                heap.sort((a, b) => a - b);
+            }
+
+            return heap.length;
+        }
+
+
+        intervals = [[0, 40], [5, 10], [15, 20]];
+        console.log(minMeetingRooms(intervals)); 
     </script>
 </body>
+
 </html>
