--- a/16. Intervals/05. Meeting Rooms II.html
+++ b/16. Intervals/05. Meeting Rooms II.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meeting Rooms IIb</title>
+    <title>Meeting Rooms II</title>
 </head>
 
 <body>
