--- a/17. Math & Geometry/02. Spiral Matrix.html
+++ b/17. Math & Geometry/02. Spiral Matrix.html
@@ -9,40 +9,51 @@
 
 <body>
     <script>
-        class Solution {
-           
-            spiralOrder(matrix) {
-                const res = [];
-                let left = 0;
-                let right = matrix[0].length;
-                let top = 0;
-                let bottom = matrix.length;
+        function spiralMatrix(matrix) {
+            const res = [];
+            let left = 0;
+            let right = matrix[0].length;
+            let top = 0;
+            let bottom = matrix.length;
 
-                while (left < right && top < bottom) {
-                    for (let i = left; i < right; i++) {
-                        res.push(matrix[top][i]);
-                    }
-                    top++;
-                    for (let i = top; i < bottom; i++) {
-                        res.push(matrix[i][right - 1]);
-                    }
-                    right--;
-                    if (!(left < right && top < bottom)) {
-                        break;
-                    }
-                    for (let i = right - 1; i >= left; i--) {
-                        res.push(matrix[bottom - 1][i]);
-                    }
-                    bottom--;
-                    for (let i = bottom - 1; i >= top; i--) {
-                        res.push(matrix[i][left]);
-                    }
-                    left++;
+            while (left < right && top < bottom) {
+
+                // Traverse from Left to Right
+                for (let i = left; i < right; i++) {
+                    res.push(matrix[top][i]);
+                }
+                top++;
+
+                // Traverse from Top to Bottom
+                for (let i = top; i < bottom; i++) {
+                    res.push(matrix[i][right - 1]);
+                }
+                right--;
+
+                // Make sure we are still within bounds
+                if (!(left < right && top < bottom)) {
+                    break;
                 }
 
-                return res;
+                // Traverse from Right to Left
+                for (let i = right - 1; i >= left; i--) {
+                    res.push(matrix[bottom - 1][i]);
+                }
+                bottom--;
+
+                // Traverse from Bottom to Top
+                for (let i = bottom - 1; i >= top; i--) {
+                    res.push(matrix[i][left]);
+                }
+                left++;
             }
+
+            return res;
         }
+
+        matrix = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]
+        const result = spiralMatrix(matrix)
+        console.log(result);
     </script>
 </body>
 
