--- a/17. Math & Geometry/03. Set Matrix Zeroes.html
+++ b/17. Math & Geometry/03. Set Matrix Zeroes.html
@@ -7,7 +7,63 @@
 </head>
 <body>
     <script>
-        
+        var setZeroes = function(matrix) {
+    const m = matrix.length;
+    const n = matrix[0].length;
+
+    let firstRowZero = false;
+    let firstColZero = false;
+
+    // Check if first row has any zeros
+    for (let j = 0; j < n; j++) {
+        if (matrix[0][j] === 0) {
+            firstRowZero = true;
+            break;
+        }
+    }
+
+    // Check if first column has any zeros
+    for (let i = 0; i < m; i++) {
+        if (matrix[i][0] === 0) {
+            firstColZero = true;
+            break;
+        }
+    }
+
+    // Use first row and column as markers
+    for (let i = 1; i < m; i++) {
+        for (let j = 1; j < n; j++) {
+            if (matrix[i][j] === 0) {
+                matrix[i][0] = 0;
+                matrix[0][j] = 0;
+            }
+        }
+    }
+
+    // Set cells to 0 based on markers
+    for (let i = 1; i < m; i++) {
+        for (let j = 1; j < n; j++) {
+            if (matrix[i][0] === 0 || matrix[0][j] === 0) {
+                matrix[i][j] = 0;
+            }
+        }
+    }
+
+    // Zero out the first row if needed
+    if (firstRowZero) {
+        for (let j = 0; j < n; j++) {
+            matrix[0][j] = 0;
+        }
+    }
+
+    // Zero out the first column if needed
+    if (firstColZero) {
+        for (let i = 0; i < m; i++) {
+            matrix[i][0] = 0;
+        }
+    }
+};
+
     </script>
 </body>
 </html>
