--- a/17. Math & Geometry/03. Set Matrix Zeroes.html
+++ b/17. Math & Geometry/03. Set Matrix Zeroes.html
@@ -9,7 +9,8 @@
 
 <body>
     <script>
-        var setZeroes = function (matrix) {
+        function setZeroes(matrix) {
+            
             const m = matrix.length;
             const n = matrix[0].length;
 
