--- a/17. Math & Geometry/03. Set Matrix Zeroes.html
+++ b/17. Math & Geometry/03. Set Matrix Zeroes.html
@@ -18,8 +18,8 @@
             let firstColZero = false;
 
             // Check if first row has any zeros
-            for (let j = 0; j < n; j++) {
-                if (matrix[0][j] === 0) {
+            for (let i = 0; i < n; i++) {
+                if (matrix[0][i] === 0) {
                     firstRowZero = true;
                     break;
                 }
@@ -54,8 +54,8 @@
 
             // Zero out the first row if needed
             if (firstRowZero) {
-                for (let j = 0; j < n; j++) {
-                    matrix[0][j] = 0;
+                for (let i = 0; i < n; i++) {
+                    matrix[0][i] = 0;
                 }
             }
 
