--- a/18. Bit Manipulation/04. Missing Number.html
+++ b/18. Bit Manipulation/04. Missing Number.html
@@ -10,16 +10,17 @@
 <body>
     <script>
         function missingNumber(nums) {
-            
+
             let res = nums.length;
 
             for (let i = 0; i < nums.length; i++) {
                 res += i - nums[i];
             }
+
             return res;
         }
 
-        nums = [0, 1, 3];
+        nums = [1,2,3];
         console.log(missingNumber(nums));
     </script>
 </body>
