--- a/18. Bit Manipulation/01. Number of One Bits.html
+++ b/18. Bit Manipulation/01. Number of One Bits.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number of One Bits</title>
+    <title>Number of One Bitss</title>
 </head>
 
 <body>
