--- a/18. Bit Manipulation/01. Number of One Bits.html
+++ b/18. Bit Manipulation/01. Number of One Bits.html
@@ -17,7 +17,7 @@
                 n = n >> 1;
             }
             
-            return countt;
+            return count;
         }
 
         const n = 0b00000000000000000000000010111;
