--- a/06. Linked List/06. Merge K Sorted Linked Lists.html
+++ b/06. Linked List/06. Merge K Sorted Linked Lists.html
@@ -10,7 +10,7 @@
 <body>
     <script>
         function mergeKLists(lists) {
-            // If the input is null or an empty array, return null (no lists to merge)
+            // If the input is null or an empty array, return null
             if (!lists || lists.length === 0) {
                 return null;
             }
