--- a/08. Heap - Priority Queue/01. Find Median From Data Stream.html
+++ b/08. Heap - Priority Queue/01. Find Median From Data Stream.html
@@ -1,1 +1,44 @@
-ggg
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Find Median From Data Stream</title>
+</head>
+<body>
+    <script>
+        class MedianFinder {
+            constructor() {
+                this.small = new PriorityQueue((a, b) => b - a); // Max heap for smaller half
+                this.large = new PriorityQueue((a, b) => a - b); // Min heap for larger half
+            }
+
+          
+            addNum(num) {
+                if (this.large.isEmpty() || num > this.large.front()) {
+                    this.large.enqueue(num);
+                } else {
+                    this.small.enqueue(num);
+                }
+
+                if (this.small.size() > this.large.size() + 1) {
+                    this.large.enqueue(this.small.dequeue());
+                } else if (this.large.size() > this.small.size() + 1) {
+                    this.small.enqueue(this.large.dequeue());
+                }
+            }
+
+          
+            findMedian() {
+                if (this.small.size() > this.large.size()) {
+                    return this.small.front();
+                } else if (this.large.size() > this.small.size()) {
+                    return this.large.front();
+                } else {
+                    return (this.small.front() + this.large.front()) / 2.0;
+                }
+            }
+        }
+    </script>
+</body>
+</html>
