--- a/09. Backtracking/01. Combination Sum.html
+++ b/09. Backtracking/01. Combination Sum.html
@@ -9,6 +9,7 @@
 
 <body>
     <script>
+        // Method 1
         class Solution {
 
             combinationSum(nums, target) {
@@ -17,7 +18,7 @@
                 this.backtrack(nums, target, ans, cur, 0);  // Start backtracking
                 return ans;
             }
-            
+
 
             // This is a backtracking function to find all combinations that sum up to a target
             backtrack(nums, target, ans, cur, index) {
@@ -48,6 +49,38 @@
 
         const solution = new Solution();
         console.log(solution.combinationSum([2, 3, 6, 7], 7));
+
+
+
+
+
+        // Method 2
+        var combinationSum = function (candidates, target) {
+            const ans = [];
+            const cur = [];
+
+            const backtrack = (target, index) => {
+                if (target === 0) {
+                    ans.push([...cur]);
+                    return;
+                }
+                if (target < 0 || index === candidates.length) {
+                    return;
+                }
+
+                // Choose current candidate
+                cur.push(candidates[index]);
+                backtrack(target - candidates[index], index); // Can reuse the same index
+                cur.pop();
+
+                // Skip current candidate
+                backtrack(target, index + 1);
+            };
+
+            backtrack(target, 0);
+            return ans;
+        };
+
     </script>
 </body>
 
