--- a/11. Graphs/03. Pacific Atlantic Water Flow.html
+++ b/11. Graphs/03. Pacific Atlantic Water Flow.html
@@ -7,6 +7,60 @@
 </head>
 <body>
     <script>
+        // Method: 1
+        var pacificAtlantic = function (heights) {
+            if (!heights || heights.length === 0 || heights[0].length === 0) return [];
+
+            const rows = heights.length;
+            const cols = heights[0].length;
+            const pacific = new Set();
+            const atlantic = new Set();
+            const result = [];
+
+            const dfs = (r, c, visited, prevHeight) => {
+                const key = `${r},${c}`;
+
+                if (
+                    r < 0 || c < 0 || r >= rows || c >= cols ||
+                    visited.has(key) ||
+                    heights[r][c] < prevHeight
+                ) return;
+
+                visited.add(key);
+
+                dfs(r + 1, c, visited, heights[r][c]);
+                dfs(r - 1, c, visited, heights[r][c]);
+                dfs(r, c + 1, visited, heights[r][c]);
+                dfs(r, c - 1, visited, heights[r][c]);
+            };
+            
+
+            for (let c = 0; c < cols; c++) {
+                dfs(0, c, pacific, heights[0][c]); // top edge (Pacific)
+                dfs(rows - 1, c, atlantic, heights[rows - 1][c]); // bottom edge (Atlantic)
+            }
+
+            for (let r = 0; r < rows; r++) {
+                dfs(r, 0, pacific, heights[r][0]); // left edge (Pacific)
+                dfs(r, cols - 1, atlantic, heights[r][cols - 1]); // right edge (Atlantic)
+            }
+
+            for (let r = 0; r < rows; r++) {
+                for (let c = 0; c < cols; c++) {
+                    const key = `${r},${c}`;
+                    if (pacific.has(key) && atlantic.has(key)) {
+                        result.push([r, c]);
+                    }
+                }
+            }
+
+            return result;
+        };
+
+
+        
+
+        // Method: 2
         class Solution {
 
             pacificAtlantic(heights) {
