--- a/11. Graphs/06. Number of Connected Components in an Undirected Graph.html
+++ b/11. Graphs/06. Number of Connected Components in an Undirected Graph.html
@@ -9,6 +9,47 @@
 
 <body>
     <script>
+        // Method: 1
+        function countComponents(n, edges) {
+            const graph = new Map();
+
+            for (let i = 0; i < n; i++) {
+                graph.set(i, []);
+            }
+
+            for (const [u, v] of edges) {
+                graph.get(u).push(v);
+                graph.get(v).push(u);
+            }
+
+            const visited = new Set();
+
+            const dfs = (node) => {
+                if (visited.has(node)) return;
+
+                visited.add(node);
+
+                for (const nei of graph.get(node)) {
+                    dfs(nei);
+                }
+            }
+
+            let count = 0;
+
+            for (let i = 0; i < n; i++) {
+                if (!visited.has(i)) {
+                    dfs(i);
+                    count++;
+                }
+            }
+
+            return count;
+        }
+
+
+        
+
+        // Method: 2
         class Solution {
             countComponents(n, edges) {
                 // Step 1: Build adjacency list
