--- a/12. Advanced Graphs/01. Alien Dictionary.html
+++ b/12. Advanced Graphs/01. Alien Dictionary.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-            foreignDictionary(words) {
+            function foreignDictionary(words) {
                 // Step 1: Initialize adjacency list for each character
                 const adj = {};
 
