--- a/12. Advanced Graphs/01. Alien Dictionary.html
+++ b/12. Advanced Graphs/01. Alien Dictionary.html
@@ -73,8 +73,10 @@
                 return res.join('');
             }
 
+        const words = ["wrt", "wrf", "er", "ett", "rftt"];
+
         const sol = new Solution();
-        console.log(sol.foreignDictionary(["wrt", "wrf", "er", "ett", "rftt"])); // Output: "wertf"
+        console.log(sol.foreignDictionary()); // Output: "wertf"
     </script>
 </body>
 
