--- a/12. Advanced Graphs/01. Alien Dictionary.html
+++ b/12. Advanced Graphs/01. Alien Dictionary.html
@@ -74,9 +74,7 @@
             }
 
         const words = ["wrt", "wrf", "er", "ett", "rftt"];
-
-        const sol = new Solution();
-        console.log(sol.foreignDictionary()); // Output: "wertf"
+        console.log(foreignDictionary(words)); // Output: "wertf"
     </script>
 </body>
 
