--- a/17. Math & Geometry/01. Rotate Image.html
+++ b/17. Math & Geometry/01. Rotate Image.html
@@ -16,24 +16,21 @@
             while (l < r) {
                 for (let i = 0; i < r - l; i++) {
 
-                    const top = l;
-                    const bottom = r;
-
                     // save the topleft
-                    const topLeft = matrix[top][l + i];
+                    const topLeft = matrix[l][l + i];
                     
 
                     // move bottom left into top left
-                    matrix[top][l + i] = matrix[bottom - i][l];
+                    matrix[l][l + i] = matrix[r - i][l];
 
                     // move bottom right into bottom left
-                    matrix[bottom - i][l] = matrix[bottom][r - i];
+                    matrix[r - i][l] = matrix[r][r - i];
 
                     // move top right into bottom right
-                    matrix[bottom][r - i] = matrix[top + i][r];
+                    matrix[r][r - i] = matrix[l + i][r];
 
                     // move top left into top right
-                    matrix[top + i][r] = topLeft;
+                    matrix[l + i][r] = topLeft;
                 }
                 r--;
                 l++;
