--- a/17. Math & Geometry/01. Rotate Image.html
+++ b/17. Math & Geometry/01. Rotate Image.html
@@ -32,6 +32,7 @@
                     matrix[top + i][r] = topLeft;
                 }
                 l++;
+                right--;
             }
         }
 
