--- a/17. Math & Geometry/01. Rotate Image.html
+++ b/17. Math & Geometry/01. Rotate Image.html
@@ -31,7 +31,7 @@
                     // move top left into top right
                     matrix[top + i][r] = topLeft;
                 }
-                l++;
+                left++;
                 right--;
             }
         }
